--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -16,3 +16,10 @@ button {
   color: var(--azul);
   box-shadow: 0px 2px 0px var(--azul);
 }
+
+span {
+  color: var(--azul);
+  font-size: 13px;
+  margin-left: 3px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
