--- a/src/components/itemListContainer/cards/Card.css
+++ b/src/components/itemListContainer/cards/Card.css
@@ -36,7 +36,7 @@
     position: absolute;
     width: 260px;
     filter: drop-shadow(5px 10px 15px rgba(8, 9, 13, 0.4));
-    margin-left: 1rem;
+    margin-left: -7rem;
     z-index: 50;
   }
   
@@ -58,7 +58,7 @@
     font-size: var(--h1-font-size);
     color: var(--first-color);
     padding-top: 2rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: -1rem;
     padding-left: 0;
     text-align: center;
   }
@@ -75,7 +75,7 @@
     text-align: center;
     font-family: "Roboto", sans-serif;
     font-size: var(--small-font-size);
-    text-align: initial;
+    text-align: center;
     margin-bottom: 1.25rem;
     margin-top: -2rem;
     margin-left: 0.5rem;
@@ -84,14 +84,15 @@
   
   .card__button {
     display: block;
-    width: max-content;
-    padding: 1.125rem 2rem;
+    text-decoration: none;
+    padding: 0.5rem 0.5rem;
     background-color: var(--first-color);
     color: var(--white-color);
     border-radius: 0.5rem;
+    font-size: 1.5rem;
     font-weight: 600;
     transition: 0.2s;
-    opacity: 0;
+    opacity: 1;
   }
   
   .card__button:hover {
@@ -108,7 +109,7 @@
   }
   
   .card:hover .card__cafe {
-    transform: translate(-10.3rem, -6rem) rotate(-20deg);
+    transform: translate(-18.3rem, -6rem) rotate(-20deg);
     opacity: 1;
   }
   
@@ -133,7 +134,8 @@
   
   .card:hover .card__description,
   .card:hover .card__button {
-    transition-delay: 0.2s;
+    transform: translate(0rem, -2.2rem);
+    transition-delay: 0.1s;
     opacity: 1;
   }
   
