--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   font-family: "Raleway", sans-serif;
+  
 }
 
 :root {
@@ -17,4 +18,5 @@
 
 body {
   background-color: var(--dark-color-lighten);
+  max-width: 100%
 }
