--- a/src/components/itemListContainer/ItemList.css
+++ b/src/components/itemListContainer/ItemList.css
@@ -5,14 +5,16 @@
     font-size: 3rem;
   }
 
+  
   .contenedorGeneralCards {
     margin-top: 3rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width: 100%;
   }
+
 
 
   .cargando {
