--- a/src/components/itemdetail/ItemDetail.css
+++ b/src/components/itemdetail/ItemDetail.css
@@ -114,6 +114,13 @@
 
 }
 
+.button__container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+
 .detail__button{
     padding: 0.5rem 3rem;
     background-color: var(--dark-color);
@@ -125,6 +132,37 @@
     transition: 0.2s ease;
     filter: drop-shadow(5px 10px 15px rgba(8, 9, 13, 0.4));
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+  }
+
+.suma__button{
+  padding: 0.1rem 1rem;
+  background-color: var(--dark-color);
+  color: var(--white-color);
+  border-radius: 0.5rem;
+  font-size: 1.3rem;
+  font-weight: 600;
+  text-decoration: none;
+  transition: 0.2s ease;
+  filter: drop-shadow(5px 10px 15px rgba(8, 9, 13, 0.4));
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.detalle__cantidad{
+  padding: 0.1rem 1rem;
+  background-color: var(--white-color);
+  color: var(--dark-color);
+  border-radius: 0.5rem;
+  font-size: 1.3rem;
+  font-weight: 600;
+  text-decoration: none;
+  transition: 0.2s ease;
+  filter: drop-shadow(5px 10px 15px rgba(8, 9, 13, 0.2));
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .detail__button:hover {
@@ -132,6 +170,10 @@
     background-color: var(--white-color);
   }
 
+  .suma__button:hover {
+    color: var(--dark-color);
+    background-color: var(--white-color);
+  }
   .detalle__img__container:hover .detalle__img {
     transform: translate(10rem, -3rem) rotate(10deg);
   }
